contrast fixes

--- a/style.css
+++ b/style.css
@@ -4,6 +4,7 @@ body {
 }
 
 header {
+    background-color: black;
     width: 100%;
     height: 20vh;
     
